update: split classes and initialized mail class(BitcoinKernel.java)